# ITMO_ICT_WebDevelopment_tools_2024-2025

./: .dockerignore  .env  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.parser  alembic.ini  async_api.py  async_connection.py  auth.py  connection.py  database.db  deploy-mkdocs.yml  docker-compose.yaml  docker-compose.yml  index.md  lab1.md  main.py  mkdocs.yml  models.py  parser_service.py  pyproject.toml  requirements.txt  saved_trips.py  tasks.py
api/: requirements.txt
bax/: docker-compose.yml  pyproject.toml
bax/app/: main.py  models.py  requirements.txt
bax/app/migrations/: env.py
bax/app/migrations/versions/: 01cd4845fd8a_create_all_tables.py
bax/parser/: Dockerfile.async  asyncio_parse.py  connection.py  main.py  multi_parse.py  requirements.txt  thread_parse.py
docs/: index.md  lab1.md  lab2.md  lab3.md  lr1_api.md  lr2_1.md  lr2_2.md  lr3.md  metrika.js
exam/: celery_app.py  celerybeat-schedule.bak
fapi_gh/: alembic.ini  main.py
lab1/: asyncio_parse.py  main.py  multi_parse.py  thread_parse.py
lab2/: mkdocs.yml
lab3/: docker-compose.yml
lab3_sem2/: Dockerfile  alembic.ini  docker-compose.yml
lab_1/: alembic.ini
lab_1_sem_2/: alembic.ini  db.py  main.py  models.py
leetcode/: 1.py  2.py  3.py  4.py  5.py  6.py
students/k3339/Kotovshchikov_Andrey/Lab1/: docker-compose.yml  main.py  pyproject.toml
students/k3339/Kotovshchikov_Andrey/Lab1/core/: config.py  depends.py
students/k3339/Kotovshchikov_Andrey/Lab1/migrations/versions/: e5626f05c980_create_tables.py
students/k3339/Kotovshchikov_Andrey/Lab1/profiles/: depends.py
students/k3339/Kotovshchikov_Andrey/Lab1/projects/: routes.py  services.py
students/k3339/Kotovshchikov_Andrey/Lab1/teams/: depends.py  dtos.py  models.py  services.py
students/k3339/Kotovshchikov_Andrey/Lab1/users/: depends.py  models.py  services.py
students/k3339/Kotovshchikov_Andrey/Lab2/: .env.example  .gitignore  async.py  processes.py  pyproject.toml  threads.py
students/k3339/Kotovshchikov_Andrey/Lab2/parsers/: __main__.py  asyncio.py  logger.py  processes.py  threads.py
students/k3339/Kotovshchikov_Andrey/Lab3/parser/: pyproject.toml  urls.example
students/k3339/Kotovshchikov_Andrey/Lab3/parser/parser/: api.py  asyncio.py  tasks.py
students/k3341/Zakharchuk_Aleksandr/Lr3/todo-app/: Dockerfile  Dockerfile.celery_worker  entrypoint.sh  pyproject.toml
students/k3341/Zakharchuk_Aleksandr/Lr3/todo-app/migrations/models/: 0_20250524161410_init.py
students/k3341/Zakharchuk_Aleksandr/Lr3/todo-app/todo_app/: main.py  models.py  settings.py  tasks.py
students/k3341/Zakharchuk_Aleksandr/Lr3/todo-app/todo_app/api/: __init__.py  parser.py  tags.py  todo_list.py  todos.py  users.py
students/k3341/Zakharchuk_Aleksandr/Lr3/todo-app/todo_app/schemas/: parser.py  tags.py  todo_list.py  todos.py  users.py
students/k3341/Zakharchuk_Aleksandr/Lr3/todo-app/todo_app/services/: __init__.py  tags.py  todo_list.py  todos.py  users.py
students/k3341/Zakharchuk_Aleksandr/Lr3/web-parser/: Dockerfile  pyproject.toml
students/k3341/Zakharchuk_Aleksandr/Lr3/web-parser/web_parser/: main.py  models.py  utils.py
students/k3341/laboratory_works/Penkov_George/lab_1/: Dockerfile  README.md  pyproject.toml
students/k3341/laboratory_works/Penkov_George/lab_1/lab_1/: connection.py  main.py
students/k3341/laboratory_works/Penkov_George/lab_1/lab_1/migrations/: env.py  script.py.mako
students/k3341/laboratory_works/Penkov_George/lab_1/lab_1/migrations/versions/: 03ba540d4942_.py  06850d99c4e4_.py  143f5b1b2f0b_init.py  2b089526cee0_add_genres_and_link.py  30c9db35475d_return_fields.py  41c6fe913dcf_add_book_and_author.py  701da5719c56_refactor_swaps.py  75cd1bb8da62_add_swaps.py  7ba7bfc95ffb_user_email_unique.py  7bc3c3a48f66_make_genre_name_unique.py  7ea070da3374_.py  94698cae6f03_user_book_link.py  965a07c1abe0_add_swaps.py  9704dcd99fb4_user_book_link_remove_datetime.py  a2059c3019bf_separate_files.py  a7a669b857c6_add_swaps.py  f2c9e41bfa33_add_nullable_to_fields.py
students/k3341/laboratory_works/Penkov_George/lab_1/lab_1/models/: authors.py  books.py  genres.py  swaps.py  user_book.py  users.py
students/k3341/laboratory_works/Penkov_George/lab_1/lab_1/practice_1/: main.py  models.py
students/k3341/laboratory_works/Penkov_George/lab_1/lab_1/practice_2/: connection.py  main.py  models.py
students/k3341/laboratory_works/Penkov_George/lab_1/lab_1/practice_3/: alembic.ini  connection.py  main.py  models.py
students/k3341/laboratory_works/Penkov_George/lab_1/lab_1/practice_3/migrations/: env.py
students/k3341/laboratory_works/Penkov_George/lab_1/lab_1/practice_3/migrations/versions/: 1d4ab59a67d6_fix_typo.py  e9c3ded348e2_add_surname_to_author.py
students/k3341/laboratory_works/Penkov_George/lab_1/lab_1/routers/: auth.py  authors.py  books.py  genres.py  swaps.py  users.py
students/k3341/laboratory_works/Penkov_George/lab_3/lab_3/: Dockerfile  main.py  models.py  parser.py  pyproject.toml  tasks.py
students/k3343/Samsonov_Alexander/lr1/: .env.example  .gitignore  README.md  pyproject.toml
students/k3343/Samsonov_Alexander/lr1/app/: __init__.py  main.py  settings.py
students/k3343/Samsonov_Alexander/lr1/app/database/: __init__.py  engine.py  session.py
students/k3343/Samsonov_Alexander/lr1/app/users/: __init__.py  model.py  repository.py  router.py  service.py
students/k3343/Samsonov_Alexander/lr1/local/: docker-compose.yml
students/k3343/Samsonov_Alexander/lr1/migrations/: env.py
students/k3343/Samsonov_Alexander/lr1/migrations/versions/: 4dccbbece5f4_initial.py
students/k3343/Samsonov_Alexander/lr3/: .gitignore  Dockerfile  compose.yml  pyproject.toml  requirements.txt
students/k3343/Samsonov_Alexander/lr3/app/: main.py  models.py
students/k3343/Samsonov_Alexander/lr3/app/db/: session.py
students/k3343/Samsonov_Alexander/lr3/app/lr2/: parsers.py
students/k3343/Samsonov_Alexander/lr3/app/task_manager/: scheduler.py  tasks.py
students/k3343/Samsonov_Alexander/lr3/mock/: fetch_hn.py  package.json
students/k3343/Samsonov_Alexander/lr3/tests/: test_httpx_tooling.py
(+3528 files in other folders)
