[project]
name = "bax"
version = "0.1.0"
description = ""
authors = [
    {name = "Сема",email = "semen2004vuz@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "aiohttp (>=3.12.6,<4.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "celery (>=5.5.3,<6.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "uvicorn (>=0.34.3,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
