[project]
name = "lab2"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp (>=3.11.16,<4.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "psycopg2[binary] (>=2.9.10,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"

