[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "celery>=5.5.2",
    "fastapi>=0.115.12",
    "greenlet>=3.2.1",
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "redis>=6.0.0",
    "respx>=0.22.0",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.2",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "respx",
    "httpx",
    "coverage"
]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["hnreader/tests"]
pythonpath = ["."]
