[project]
name = "parser"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "aiohttp (>=3.11.18,<4.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "celery[redis] (>=5.5.2,<6.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "eventlet (>=0.39.1,<0.40.0)",
    "psycopg[binary] (>=3.2.7,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
