[tool.poetry]
name = "web-parser"
version = "0.1.0"
description = ""
authors = ["Alexander Zakharchuk <mystang.pro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
pydantic = "^2.11.5"
uvicorn = "^0.34.2"
aiohttp = "^3.11.18"
beautifulsoup4 = "^4.13.4"
lxml = "^5.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
parser = "web_parser.main:main"
