[project]
name = "lab-1"
version = "0.1.0"
description = ""
authors = [
    {name = "George Penkov",email = "93640345+penkovgd@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "alembic (>=1.15.1,<2.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "pydantic-extra-types (>=2.10.2,<3.0.0)",
    "pycountry (>=24.6.1,<25.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.6.8,<10.0.0)",
    "mkdocs-render-swagger-plugin (>=0.1.2,<0.2.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
