[project]
name = "lab-3"
version = "0.1.0"
description = ""
authors = [
    {name = "George Penkov",email = "93640345+penkovgd@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "requests (>=2.32.3,<3.0.0)",
    "aiohttp (>=3.11.18,<4.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "celery[redis] (>=5.5.2,<6.0.0)",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
lab-1 = {path = "../../lab_1"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
